[package]
name = "network-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = "0.7.4"
futures = "0.3.25"
chrono = { version = "0.4.22", features= ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
public-ip = "0.2.2"
local-ip-address = "0.4.9"
